eks/deploymentPVC.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
        - name: my-container
          image: 541804384520.dkr.ecr.ca-central-1.amazonaws.com/practise:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-pvc
