eks/ClassicLoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-clb
  labels:
    app: myclb
spec:
  selector:
    app: myapp1
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
