eks/NetworkLoadBalancer-New.yml
apiVersion: v1
kind: Service
metadata:
  name: my-clb
  labels:
    app: myclb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external" #must have AWS loadbalancer controller installed
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
spec:
  selector:
    app: myapp1
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
