eks/NetworkLoadBalancer-Old.yml
apiVersion: v1
kind: Service
metadata:
  name: my-clb
  labels:
    app: myclb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: myapp1
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
