eks/Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-svc
  labels:
    app: my-nodeport-svc
spec:
  type: NodePort
  selector:
    app: myapp1
  pors:
    - port: 80
      targetPort: 80
      nodePort: 31231
