eks/ALB-Pathrouting.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ALB-path
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: my-ALB
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

spec:
  ingressClassName: my-aws-ingress-class
  rules:
   - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-nodeport-svc
              port:
                number: 80
