eks/ALB-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ALB-ssl
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: my-ALB
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:xxxxx:certificate/xxxxxxx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: my-aws-ingress-class
  # order is very important 
  rules:
   - http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
              name: my-nodeport-svc-app1
              port:
                number: 80

        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: my-nodeport-svc-app2
              port:
                number: 80
